// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when descriptors in separate dependency-linked namespaces have identical names should have validation failures for each entity 1`] = `"Descriptor named EntityName is a duplicate declaration of that name."`;

exports[`when descriptors in separate dependency-linked namespaces have identical names should have validation failures for each entity 2`] = `
Object {
  "column": 2,
  "line": 7,
  "tokenText": "Descriptor",
}
`;

exports[`when descriptors in separate dependency-linked namespaces have identical names should have validation failures for each entity 3`] = `"Descriptor named EntityName is a duplicate declaration of that name."`;

exports[`when descriptors in separate dependency-linked namespaces have identical names should have validation failures for each entity 4`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Descriptor",
}
`;
